cambio de ruta de logo de inicio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
         <div class="logo">
           <a href="./index.html">
-            <img src="../imagenes/logo.jpg" alt="Logo">
+            <img src="./imagenes/isologo.jpg" alt="Logo">
           </a>
         </div>
     
