--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mariano Amoroso</title>
+    <meta name="description" content="Arquitecto Mariano Amoroso">
+    <meta name="keywords" content="arquitecto, arquitectura, construccion">
+    <title>Sobre mi - M.A.</title>
     <link rel="shortcut icon" href="../imagenes/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
