cambios de imagenes y textos

--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -68,29 +68,29 @@
       <div class="contenedor__sliders">
           <ul class="sliders">
               <li class="slider activo servicio1">
-                  <a href="#" class="accionado"><span>Servicio 1</span></a>
+                  <a href="#" class="accionado"><span>Diseño</span></a>
                   <div class="contenido__interior">
-                      <h2>Servicio 1</h2>
-                      <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nulla natus accusamus et repudiandae sequi exercitationem recusandae nemo dolores! Provident sapiente sequi nisi similique assumenda deserunt blanditiis amet repellat esse illum. Pariatur reiciendis voluptas neque.
+                      <h2><span>Diseño</span></h2>
+                      <p class="p__servicio1">
+                        Imagino y construyo espacios que son un reflejo de tu estilo y personalidad. Me encanta dar vida a tus sueños, agregando ese toque único y funcional que hace que cada proyecto sea especial.
                       </p>
                   </div>
               </li>
               <li class="slider servicio2">
-                  <a href="#" class="accionado"><span>Servicio 2</span></a>
+                  <a href="#" class="accionado"><span>Consultoría</span></a>
                   <div class="contenido__interior">
-                      <h2>Servicio 2</h2>
-                      <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nulla natus accusamus et repudiandae sequi exercitationem recusandae nemo dolores! Provident sapiente sequi nisi similique assumenda deserunt blanditiis amet repellat esse illum. Pariatur reiciendis voluptas neque.
+                      <h2><span>Consultoría y asesoramiento</span></h2>
+                      <p class="p__servicio2">
+                        Si necesitas una mente creativa y experta para tu proyecto, estoy para ayudarte. Como arquitecto y asesor, mi objetivo es simplificar tus desafíos. Ya sea que necesites ajustar diseños, resolver problemas técnicos o dar vida a nuevas ideas.
                       </p>
                   </div>
               </li>
               <li class="slider servicio3">
-                  <a href="#" class="accionado"><span>Servicio 3</span></a>
+                  <a href="#" class="accionado"><span>Supervisión</span></a>
                   <div class="contenido__interior">
-                      <h2>Servicio 3</h2>
-                      <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad nulla natus accusamus et repudiandae sequi exercitationem recusandae nemo dolores! Provident sapiente sequi nisi similique assumenda deserunt blanditiis amet repellat esse illum. Pariatur reiciendis voluptas neque.
+                      <h2><span>Supervisión de Construcción</span></h2>
+                      <p class="p__servicio3">
+                        Estaré en la obra cuidando hasta el último detalle. Vigilando, revisando y asegurándome de que todo quede según lo pedido, desde los cimientos hasta los últimos detalles. ¡Puedes confiar en que tu proyecto estará en buenas manos! 
                       </p>
                   </div>
               </li>
