--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -76,22 +76,22 @@
           <div class="carousel-item active">
             <img src="../imagenes/pr1.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Diseño de viviendas</h5>
+              <p>Creación de casas familiares, adaptadas a las necesidades y preferencias de los clientes.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../imagenes/pr2.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Edificios comerciales</h5>
+              <p>Planificación de espacios para oficinas, restaurantes y todo tipo de negocio.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="../imagenes/pr3.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Restauración y renovación</h5>
+              <p>Transformación de espacios deteriorados. Reviviendo o dando un cambio.</p>
             </div>
           </div>
         </div>
