agregado de texto para pantallas chicas

--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -79,6 +79,10 @@
               <h5>Diseño de viviendas</h5>
               <p>Creación de casas familiares, adaptadas a las necesidades y preferencias de los clientes.</p>
             </div>
+            <div class="carousel-caption__pantallaspequeñas">
+              <h5>Diseño de viviendas</h5>
+              <p>Creación de casas familiares, adaptadas a las necesidades y preferencias de los clientes.</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="../imagenes/pr2.JPG" class="d-block w-100" alt="...">
@@ -86,10 +90,18 @@
               <h5>Edificios comerciales</h5>
               <p>Planificación de espacios para oficinas, restaurantes y todo tipo de negocio.</p>
             </div>
+            <div class="carousel-caption__pantallaspequeñas">
+              <h5>Edificios comerciales</h5>
+              <p>Planificación de espacios para oficinas, restaurantes y todo tipo de negocio.</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="../imagenes/pr3.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
+              <h5>Restauración y renovación</h5>
+              <p>Transformación de espacios deteriorados. Reviviendo o dando un cambio.</p>
+            </div>
+            <div class="carousel-caption__pantallaspequeñas">
               <h5>Restauración y renovación</h5>
               <p>Transformación de espacios deteriorados. Reviviendo o dando un cambio.</p>
             </div>
