--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -105,34 +105,46 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Servicio #1
+              Diseño
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-            <div class="accordion-body primero">
-          </div>
+            <div class="accordion-body primero"></div>
+            <div class="texto__acordion">
+              <p class="p__acordionservicio">
+                Imagino y construyo espacios que son un reflejo de tu estilo y personalidad. Me encanta dar vida a tus sueños, agregando ese toque único y funcional que hace que cada proyecto sea especial.
+              </p>
+            </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Servicio #2
+              Consultoría y asesoramiento
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body segundo">
-          </div>
+            <div class="accordion-body segundo"></div>
+            <div class="texto__acordion">
+              <p class="p__acordionservicio">
+                Si necesitas una mente creativa y experta para tu proyecto, estoy para ayudarte. Como arquitecto y asesor, mi objetivo es simplificar tus desafíos. Ya sea que necesites ajustar diseños, resolver problemas técnicos o dar vida a nuevas ideas.
+              </p>
+            </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Servicio #3
+              Supervisión de Construcción
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body tercero">
-          </div>
+            <div class="accordion-body tercero"></div>
+            <div class="texto__acordion">
+              <p class="p__acordionservicio">
+                Estaré en la obra cuidando hasta el último detalle. Vigilando, revisando y asegurándome de que todo quede según lo pedido, desde los cimientos hasta los últimos detalles. ¡Puedes confiar en que tu proyecto estará en buenas manos! 
+              </p>
+            </div>
           </div>
         </div>
       </div>
