ultima modificacion general

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -34,7 +34,7 @@
     
         <nav class="navbar navbar-dark bg-dark fixed-top d-md-none">
             <div class="container-fluid">
-              <a class="navbar-brand" href="../index.html">Inicio</a>
+              <a class="navbar-brand" href="../index.html">Mariano Amoroso</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -113,7 +113,8 @@
 
             <div class="contacto__mapa">
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101627.08591189874!2d-115.87404718282879!3d37.25135082345899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80b81baaba3e8c81%3A0x970427e38e6237ae!2s%C3%81rea%2051%2C%20Nevada%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sar!4v1689889412807!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d193461.9268424204!2d-115.80400699999998!3d37.251371!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80b81baaba3e8c81%3A0x970427e38e6237ae!2s%C3%81rea%2051%2C%20Nevada%2C%20EE.%20UU.!5e1!3m2!1ses-419!2sar!4v1691887357098!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 
             </div>
             
