--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -34,7 +34,7 @@
 
     <nav class="navbar navbar-dark bg-dark fixed-top d-md-none">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Inicio</a>
+          <a class="navbar-brand" href="../index.html">Mariano Amoroso</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -115,6 +115,43 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+
+      <div class="texto__proyectos">
+        
+        <h4 class="titulo__texto__proyectos">Forjando Sueños Arquitectónicos: Diseño Residencial, Espacios Comerciales y Renovación Histórica</h4>
+
+        <p>Saludos a todos, es un honor estar aquí y compartir con ustedes mi pasión por la arquitectura y los emocionantes proyectos en los que he tenido el privilegio de trabajar. A lo largo de mi trayectoria, he descubierto que la arquitectura es mucho más que la creación de estructuras; es el arte de dar vida a los sueños y a las visiones de las personas.</p>
+
+        <h4 class="titulo__texto__proyectos">Diseño de Viviendas: Transformando Espacios en Hogares</h4>
+
+        <p>El diseño de viviendas es un proceso íntimo y apasionante. Cada proyecto es único, una oportunidad para transformar espacios en hogares. Desde la selección de materiales hasta la disposición de las habitaciones, mi objetivo es fusionar funcionalidad y belleza en cada rincón. Ya sea una casa contemporánea o una cálida morada campestre, cada diseño se convierte en una extensión del estilo de vida y la personalidad de sus habitantes.</p>
+
+        <p>Mis diseños de viviendas no solo buscan ser estéticamente agradables, sino que también buscan proporcionar soluciones prácticas y eficientes para la vida diaria. Creo en la importancia de comprender las necesidades y los deseos únicos de mis clientes para crear espacios que se adapten perfectamente a sus vidas y fluyan con su cotidianidad.</p>
+
+        <h4 class="titulo__texto__proyectos">Edificios Comerciales: Espacios que Inspiran Éxito</h4>
+
+        <p>El diseño de edificios comerciales es un emocionante desafío que abarca mucho más que planos y estructuras. Es una oportunidad para crear entornos que no solo sean funcionales, sino que también inspiren el éxito y la innovación. Al diseñar espacios comerciales, me sumerjo en la identidad y la visión del negocio para crear un ambiente que refleje su esencia.</p>
+
+        <p>Desde oficinas que fomentan la colaboración hasta restaurantes que cuentan historias a través del diseño, cada proyecto comercial es una oportunidad para dejar una huella duradera. Mi enfoque se basa en la creación de espacios que no solo atraigan a los clientes, sino que también mejoren la experiencia de quienes trabajan y visitan esos lugares.</p>
+
+        <h4 class="titulo__texto__proyectos">Restauración y Renovación: Honrando el Pasado, Creando Futuro</h4>
+
+        <p>La restauración y la renovación son mi manera de rendir homenaje al patrimonio arquitectónico que nos rodea. Al revitalizar estructuras antiguas, mi objetivo es preservar la historia y la herencia que representan, al mismo tiempo que les insuflamos nueva vida y propósito. Cada grieta y cada detalle cuentan una historia, y me enorgullece devolverles su antigua gloria.</p>
+
+        <p>Estos proyectos son un desafío único, que requiere un enfoque meticuloso y un profundo respeto por el pasado. Mi objetivo es encontrar el equilibrio entre la autenticidad histórica y la funcionalidad moderna, creando espacios que sirvan como puentes entre el ayer y el mañana.</p>
+
+        <h4 class="titulo__texto__proyectos">Un Futuro de Creatividad y Logros</h4>
+
+        <p>A medida que avanzamos hacia el futuro, mi pasión por la arquitectura sigue siendo una fuerza impulsora en mi vida. Cada proyecto es una oportunidad para aprender, crecer y explorar nuevas posibilidades. Mi compromiso con la excelencia y la innovación sigue siendo inquebrantable.</p>
+
+        <p>Quiero agradecerles por su apoyo y confianza en mi trabajo. Cada proyecto que abordo es un testimonio de la colaboración y la visión compartida. Estoy emocionado de seguir forjando sueños arquitectónicos y creando espacios que inspiren y perduren en el tiempo.</p>
+
+        <h4 class="titulo__texto__proyectos">Conclusion</h4>
+
+        <p>En resumen, mi trabajo como arquitecto se centra en diseñar viviendas que se conviertan en hogares, en crear edificios comerciales que inspiren éxito y en restaurar espacios con historia. Cada proyecto es un viaje emocionante y una oportunidad para dejar una marca positiva en el mundo a través del diseño y la creatividad. Estoy deseoso de seguir explorando nuevas posibilidades y creando espacios que enriquezcan las vidas de las personas.</p>
+
+        <p>Gracias por su tiempo y por ser parte de este viaje arquitectónico.</p>
       </div>
 
   </main>
