--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -34,7 +34,7 @@
 
     <nav class="navbar navbar-dark bg-dark fixed-top d-md-none">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Inicio</a>
+          <a class="navbar-brand" href="../index.html">Mariano Amoroso</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
